# SOPES1_202100119

./: .gitignore  README.md
Proyecto 2/Backend/Locust/: docker-compose.yml  locustfile.py
Proyecto1/: docker-compose.yml  run.sh
Proyecto1/Backend/API/: .dockerignore  .gitignore  Dockerfile  main.py
Proyecto1/Backend/Grafana/: dashboard.json  datasources.yaml
Proyecto1/Backend/Modules/: Makefile  sysinfo_202100119.c
Proyecto1/Backend/Scripting/: contenerized.sh
Proyecto1/Documentation/: Manual_Tecnico.md
Proyecto2/: buildAndPush.sh  docker-compose.yml
Proyecto2/Backend/Golang/: README.md
Proyecto2/Backend/Locust/: .dockerignore  README.md  locustfile.py
Proyecto2/Backend/Rust/: README.md
Proyecto2/Backend/Rust/API/: .dockerignore  .env  Cargo.toml  Dockerfile
Proyecto2/Backend/Rust/API/src/: main.rs
Proyecto2/Documentation/: Manual_Tecnico.md
Proyecto2/Frontend/Grafana/: Dockerfile  dashboard.json  dashboard.yaml  datasource.yaml  datasources.yaml
Proyecto2/Kubernetes/: script.sh
Proyecto2/Kubernetes/Ingress/: ingress.yaml
Proyecto2/Kubernetes/deployments/: deployment_consumer_kafka.yaml  deployment_consumer_rabbitmq.yaml  deployment_go_grcp.yaml  deployment_grpc_server_kafka.yaml  deployment_grpc_server_rabbit.yaml  deployment_rabbitmq.yaml  deployment_redis.yaml  deployment_rust.yaml  deployment_valkey.yaml  grafana.yaml
Proyecto2/Kubernetes/ingress/: ingress.yaml
Proyecto2/Kubernetes/kafka/: cluster.yaml  topic.yaml
Proyecto2/Kubernetes/services/: service.yaml  service_go_grpc.yaml  service_grpc_server_kafka.yaml  (+5 more)
(+34 files in other folders)
